--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   animated_text_kit: ^4.2.1
   carousel_slider: ^4.0.0
   photo_view: ^0.12.0
+  provider: ^5.0.0
   # imagebutton: ^0.0.6
 
 dev_dependencies:
