current projects and video podcast for home_details

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   carousel_slider: ^4.0.0
   photo_view: ^0.12.0
   provider: ^5.0.0
+  youtube_player_iframe: ^2.2.1
   # imagebutton: ^0.0.6
 
 dev_dependencies:
