--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   photo_view: ^0.12.0
   provider: ^5.0.0
   youtube_player_iframe: ^2.2.1
+  getwidget: ^2.0.3
   # imagebutton: ^0.0.6
 
 dev_dependencies:
