--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^5.0.0
   youtube_player_iframe: ^2.2.1
   getwidget: ^2.0.3
+  flutter_svg: ^0.22.0
   # imagebutton: ^0.0.6
 
 dev_dependencies:
