--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   youtube_player_iframe: ^2.2.1
   getwidget: ^2.0.3
   flutter_svg: ^0.22.0
+  quotes: ^0.0.2
   # imagebutton: ^0.0.6
 
 dev_dependencies:
