--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   getwidget: ^2.0.3
   flutter_svg: ^0.22.0
   quotes: ^0.0.2
+  easy_google_maps: ^1.0.0+2
+  url_launcher: ^6.0.9
+  mailto: ^2.0.0
   # imagebutton: ^0.0.6
 
 dev_dependencies:
