--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/social_icons/
+    - assets/images/school/
+    - assets/images/toilet/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -93,7 +96,7 @@ flutter:
         - asset: assets/fonts/Raleway/Raleway-Black.ttf
         - asset: assets/fonts/Raleway/Raleway-Bold.ttf
         - asset: assets/fonts/Raleway/Raleway-Light.ttf
-          style: italic
+          # style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
