--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   url_launcher: ^6.0.9
   mailto: ^2.0.0
   peanut: ^4.0.1
+  firebase_core: ^1.6.0
+  cloud_firestore: ^2.5.3
   # imagebutton: ^0.0.6
 
 dev_dependencies:
